crates/submilli-engine/src/codegen/snapshots/submilli_engine__codegen__tests__assert_false_throws_with_backtrace.snap
---
source: crates/submilli-engine/src/codegen/mod.rs
expression: dump
---
error: Error: oops
  at main (script.subm:1:39)  [thrown here]
1 | function main(): void { assert(false, "oops"); }
  |                                       ^
