crates/submilli-engine/src/codegen/snapshots/submilli_engine__codegen__tests__dwarf_die_snapshot.snap
---
source: crates/submilli-engine/src/codegen/mod.rs
assertion_line: 4927
expression: dump
---
<0xb> DW_TAG_compile_unit
  DW_AT_name = Str("script.subm")
  DW_AT_comp_dir = Str("")
  DW_AT_language = Language(DW_LANG_C99)
  DW_AT_low_pc = Addr(0x0)
  DW_AT_high_pc = Udata(293)
  DW_AT_stmt_list = DebugLineRef(DebugLineOffset(0))
<0x1f> DW_TAG_subprogram
  DW_AT_name = Str("<top level>")
  DW_AT_low_pc = Addr(0x2)
  DW_AT_high_pc = Udata(2)
  DW_AT_decl_file = FileIndex(1)
  DW_AT_decl_line = Udata(1)
<0x2b> DW_TAG_subprogram
  DW_AT_name = Str("main")
  DW_AT_low_pc = Addr(0x5)
  DW_AT_high_pc = Udata(5)
  DW_AT_decl_file = FileIndex(1)
  DW_AT_decl_line = Udata(1)
