crates/submilli-engine/src/codegen/snapshots/submilli_engine__codegen__tests__failed_cast_backtrace_points_at_the_cast.snap
---
source: crates/submilli-engine/src/codegen/mod.rs
expression: dump
---
error: TypeError: type mismatch: expected P, got object at $["a"]
  at main (script.subm:5:5)  [thrown here]
4 |   const r = g(1,
5 |     JSON.parse("{}") as P);
  |     ^
6 | }
